--- a/project.ipynb
+++ b/project.ipynb
@@ -1058,6 +1058,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1139180",
+   "metadata": {},
+   "source": [
+    "The submission accuracy on Kaggle for a test set was 0.80631"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "69108ddc",
    "metadata": {},
    "source": [
